--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
   nginx:
     image: nginx:1.24
     volumes:
+      - .:/var/www
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
     environment:
-      - VIRTUAL_HOST=
+      - VIRTUAL_HOST=laravel.local
     depends_on:
       - php
 
@@ -15,3 +16,14 @@ services:
     image: php:8.2-fpm
     volumes:
       - .:/var/www
+
+  db:
+    image: mariadb:10.3.35
+    environment:
+      - MARIADB_ROOT_PASSWORD=secret
+      - MARIADB_DATABASE=laravel
+    volumes:
+      - db:/var/lib/mysql
+
+volumes:
+  db:
