--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - php
 
   php:
-    image: php:8.2-fpm
+    build: 
+      dockerfile: ./docker/php/Dockerfile
     volumes:
       - .:/var/www
 
