--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   nginx:
     image: nginx:1.24
     volumes:
-      - .:/var/www
+      - .:/var/www/html
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
     environment:
@@ -16,7 +16,7 @@ services:
     build: 
       dockerfile: ./docker/php/Dockerfile
     volumes:
-      - .:/var/www
+      - .:/var/www/html
 
   db:
     image: mariadb:10.3.35
