--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Laravel Generated
 /.phpunit.cache
 /node_modules
 /public/build
@@ -17,3 +18,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+# Docker
+/docker-compose.override.yml
