--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - .:/var/www/html
 
   db:
-    image: mariadb:10.3.35
+    image: mariadb:10.11.3 # mariadb:10.3.35 (mysql:5.7)
     environment:
       - MARIADB_ROOT_PASSWORD=secret
       - MARIADB_DATABASE=laravel
