--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "name": "nikhilvijayanv/laravel-10",
+    "type": "project",
+    "description": "The Laravel Framework.",
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
+    "license": "MIT",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
