--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "nikhilvijayanv/laravel-10",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Laravel framework version 10",
     "version": "1.0.0",
     "keywords": [
         "framework",
